--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -81,6 +81,13 @@
             android:text="@string/purchased_words_consumption"
             style="@style/ChatText"/>
 
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switch_block_ads"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/block_ads"
+            style="@style/ChatText"/>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
