add alby verify response data class and request func, add upgrade dialog to get purchase amount, add payment data class, add payment to user's payments in database subcollection, add credit purchase words to account, move verify ln payment fun to MainActivity: untested

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="chat_label_margin">2sp</dimen>
     <dimen name="chat_label_layout_width">30sp</dimen>
     <dimen name="settings_speech_speed_slider_width">150sp</dimen>
+    <dimen name="dialog_purchase_words_amount_edittext_width">100sp</dimen>
+    <dimen name="dialog_purchase_words_amount_label_margin_top">10sp</dimen>
 </resources>
