--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/ChatFragment"
-        android:name="org.bitanon.chatgpt3.ChatFrag"
+        android:name="org.bitanon.gpt4btc.ChatFrag"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_chat">
 
